--- a/dev_env/frontend/src/App.css
+++ b/dev_env/frontend/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+html, body {
+  margin:0px !important;
+  padding:0px !important;
+  height: 100vh;
+  width: 100vw;
+  background-color: #ffffff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.content {
+  width: 100%;
+  height: 100%;
+  /* background-color: #ECF0F1; */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.top {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  /* border: 1px solid red; */
+}
+
+.bottom {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid green; */
+}
+
+.bottom-button {
+  width: 100%;
+  display: flex;
+  /* border: 1px solid green; */
+}
+
+.bottom-reactjson {
+  width: 100%;
+  overflow: auto;
+  text-align: left;
+  /* border: 1px solid green; */
 }
